# Flight-Fare-Analysis

./: README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  config.py
src/data/: __init__.py  data_loader.py
src/eda/: __init__.py  eda.py
src/features/: __init__.py  feature_engineering.py
src/models/: __init__.py  base_model.py  model_comparison.py  regressors.py
src/utils/: __init__.py  logger.py
tests/: test_data_loader.py  test_feature_engineering.py  test_models.py
