[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "flight-fare-analysis"
version = "1.0.0"
description = "Flight Price Prediction ML Pipeline for Bangladesh domestic flights"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Zainab Abdullai"},
]
keywords = ["machine-learning", "flight-prices", "regression", "prediction"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.28.0",
]
api = [
    "flask>=3.0.0",
]
xgboost = [
    "xgboost>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
]
all = [
    "flight-fare-analysis[web,api,xgboost,dev]",
]

[project.scripts]
flight-pipeline = "main:main"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pylint."messages control"]
disable = ["C0114", "C0115", "C0116"]
